--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ header p{font-size:13px;color:#bcc3c8;margin-top:6px}
 
   <section id="gridWrap" class="grid">
     <div class="grid-lights">
-      <!-- 16 lampu keliling, otomatis -->
+      <!-- 16 lampu keliling -->
       <div></div><div></div><div></div><div></div>
       <div></div><div></div><div></div><div></div>
       <div></div><div></div><div></div><div></div>
@@ -202,5 +202,123 @@ header p{font-size:13px;color:#bcc3c8;margin-top:6px}
   <div id="resultArea" class="result"></div>
 
 </div>
+
+<script type="module">
+import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
+import { getDatabase, ref, get, set, onValue } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-database.js";
+
+const firebaseConfig = {
+  apiKey: "YOUR_API_KEY",
+  authDomain: "YOUR_PROJECT.firebaseapp.com",
+  databaseURL: "YOUR_DATABASE_URL",
+  projectId: "YOUR_PROJECT",
+  storageBucket: "YOUR_PROJECT.appspot.com",
+  messagingSenderId: "YOUR_SENDER_ID",
+  appId: "YOUR_APP_ID"
+};
+
+const app = initializeApp(firebaseConfig);
+const db = getDatabase(app);
+
+const configRef = ref(db, "gameConfig/cards");
+
+const gridWrap = document.getElementById('gridWrap');
+const verifyBtn = document.getElementById('verifyBtn');
+const codeInput = document.getElementById('codeInput');
+const statusEl = document.getElementById('status');
+const resultArea = document.getElementById('resultArea');
+
+let serverConfig = null;
+let unlocked = false;
+let revealed = new Set();
+const maxSelect = 3;
+let selectedCount = 0;
+
+// build grid function
+function buildGrid(){
+  gridWrap.innerHTML='<div class="grid-lights">'+gridWrap.querySelector('.grid-lights').innerHTML+'</div>';
+  for(let i=0;i<9;i++){
+    const c=document.createElement('div');
+    c.className='card locked';
+    c.dataset.index=i;
+    c.innerHTML=`
+      <div class="card-inner">
+        <div class="card-front">Kartu ${i+1}</div>
+        <div class="card-back"><span class="label">?</span></div>
+      </div>`;
+    c.addEventListener('click',onCardClick);
+    gridWrap.appendChild(c);
+  }
+}
+
+function setStatus(txt, ok=true){
+  statusEl.textContent='Status: '+txt;
+  statusEl.style.color=ok?'#bcc3c8':'#ff9a9a';
+}
+
+onValue(configRef,snap=>{
+  if(snap.exists()){serverConfig=snap.val();setStatus('Siap — data tersedia 🎁');if(!unlocked) buildGrid();}
+  else{serverConfig=null;setStatus('Belum ada konfigurasi admin',false);buildGrid();}
+});
+
+async function verifyCode(code){
+  try{
+    const usedSnap = await get(ref(db,"gameConfig/usedCodes/"+code));
+    if(usedSnap.exists()){return {ok:false,msg:"Kode sudah dipakai"};}
+    if(!serverConfig) return {ok:false,msg:"Tidak ada konfigurasi admin"};
+    if(code !== (serverConfig.code||'')) return {ok:false,msg:"Kode salah"};
+    return {ok:true,msg:"Kode valid"};
+  }catch(err){console.error(err);return {ok:false,msg:"Error verifikasi"};}
+}
+
+async function onCardClick(e){
+  if(selectedCount>=maxSelect) return;
+  const el=e.currentTarget;
+  const idx=Number(el.dataset.index);
+  if(!unlocked || revealed.has(idx)) return;
+  const cardsArr=serverConfig?.cards||[];
+  let val=cardsArr[idx]||'Kosong';
+  if(selectedCount>0 && val!==cardsArr[0]) val='ZONK';
+  el.classList.add('flip');
+  el.querySelector('.label').textContent=val;
+  revealed.add(idx);
+  selectedCount++;
+  const msg=document.createElement('div'); msg.className='small';
+  msg.textContent=`Kamu membuka Kartu ${idx+1}: ${val}`;
+  resultArea.prepend(msg);
+  if(selectedCount>=maxSelect){
+    await saveUsedCode();
+    document.querySelectorAll('.card').forEach(c=>c.classList.add('locked'));
+    const info=document.createElement('div');info.className='small';
+    info.textContent='🎉 Hadiah keluar! Hubungi admin untuk claim';
+    resultArea.prepend(info);
+  }
+}
+
+async function saveUsedCode(){
+  const code=(codeInput.value||'').trim();
+  if(!code||!serverConfig)return;
+  const cardsResult=Array.from(gridWrap.querySelectorAll('.card'))
+    .map(c=>c.classList.contains('flip')?c.querySelector('.label').textContent:null);
+  await set(ref(db,"gameConfig/usedCodes/"+code),{cards:cardsResult,time:Date.now(),used:true});
+  setStatus('Kode & kartu tersimpan ✓');
+  unlocked=false;verifyBtn.disabled=true;codeInput.disabled=true;
+}
+
+verifyBtn.addEventListener('click',async ()=>{
+  const code=(codeInput.value||'').trim();
+  if(!code){setStatus('Masukkan kode',false);return;}
+  setStatus('Memeriksa kode...');
+  verifyBtn.disabled=true;
+  const res=await verifyCode(code);
+  verifyBtn.disabled=false;
+  if(!res.ok){setStatus(res.msg,false);unlocked=false;document.querySelectorAll('.card').forEach(c=>c.classList.add('locked'));return;}
+  unlocked=true;selectedCount=0;revealed.clear();
+  buildGrid();
+  setStatus('Kode benar — silakan pilih sampai 3 kartu 🎁');
+});
+
+buildGrid();
+</script>
 </body>
 </html>
