--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 <style>
 :root{
-  --bg1:#040816;
-  --bg2:#0a1220;
-  --gold:#ffe079;
-  --accent:#ffcf6b;
-  --muted:#bcc3c8;
+  --bg1:#071229;
+  --bg2:#0c1624;
+  --gold:#ffef9f;
+  --accent:#d4af37;
+  --muted:#bfc6c9;
 }
 
 *{box-sizing:border-box;margin:0;padding:0}
@@ -20,7 +20,7 @@ body{
   font-family:'Poppins',system-ui,Segoe UI,Roboto,sans-serif;
   background:linear-gradient(180deg,var(--bg1),var(--bg2));
   color:#fff;
-  padding:16px;
+  padding:12px;
 }
 
 .wrap{
@@ -35,81 +35,24 @@ body{
   overflow:hidden;
 }
 
-header{text-align:center}
-header h1{font-size:22px;color:var(--gold);text-shadow:0 0 10px rgba(255,215,120,.2)}
-header p{font-size:13px;color:#bcc3c8;margin-top:6px}
-
-/* code input */
-.code-container{position:relative;margin-top:16px}
-#codeInput{
-  width:100%;
-  padding:14px;
-  border-radius:12px;
-  border:none;
-  background:#0b141b;
-  color:#111;
-  font-weight:700;
-  z-index:2;
+header{text-align:center; position:relative; margin-bottom:16px;}
+header h1{
+  font-size:24px;
+  color:var(--gold);
+  text-shadow:0 0 12px rgba(255,223,130,.5);
+  letter-spacing:2px;
+  display:inline-block;
   position:relative;
-  box-shadow:0 0 8px #ffef9f, 0 0 12px #ffef9f inset;
 }
-#codeInput:focus{outline:none;box-shadow:0 0 12px #ffef9f, 0 0 16px #ffef9f inset;}
-
-/* verify button */
-.row{margin-top:16px;display:flex;gap:10px}
-.btn{
-  background:linear-gradient(135deg,var(--gold),var(--accent));
-  color:#111;
-  padding:12px;
-  border-radius:12px;
-  border:none;
-  cursor:pointer;
-  font-weight:800;
-  flex-shrink:0;
-}
-.btn:disabled{opacity:.5;cursor:not-allowed}
-#status{margin-top:10px;text-align:center;color:#bcc3c8;font-size:13px}
-
-/* prizes */
-.prize-list{
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(120px,1fr));
-  gap:12px;
-  margin-top:18px;
-}
-.prize{
-  background:linear-gradient(135deg,#ffcc6b,#ffd966,#ffe079);
-  padding:12px;
-  border-radius:12px;
-  font-weight:800;
-  text-align:center;
-  color:#111;
-  box-shadow:0 8px 26px rgba(0,0,0,.4);
-  border:1px solid rgba(255,255,255,0.08)
-}
-.prize small{display:block;margin-top:6px;font-size:12px;color:#222}
-
-/* grid cards */
-.grid{
-  display:grid;
-  grid-template-columns:repeat(3,1fr);
-  gap:12px;
-  margin-top:20px;
-  position:relative;
-  overflow:hidden;
-  background:#0b141b;
-  border-radius:14px;
-  padding:12px;
-}
-
-/* Lampu keliling grid */
-.grid-lights{
+.header-lights{
   position:absolute;
-  inset:0;
-  pointer-events:none;
+  top:-12px;
+  left:50%;
+  transform:translateX(-50%);
+  display:flex;
+  gap:6px;
 }
-.grid-lights div{
-  position:absolute;
+.header-lights div{
   width:6px;
   height:6px;
   border-radius:50%;
@@ -117,70 +60,122 @@ header p{font-size:13px;color:#bcc3c8;margin-top:6px}
   opacity:0.3;
   animation:blink 1.5s infinite;
 }
-.grid-lights div:nth-child(1){top:-4px;left:10%;animation-delay:0s;}
-.grid-lights div:nth-child(2){top:-4px;left:30%;animation-delay:.2s;}
-.grid-lights div:nth-child(3){top:-4px;left:50%;animation-delay:.4s;}
-.grid-lights div:nth-child(4){top:-4px;left:70%;animation-delay:.6s;}
-.grid-lights div:nth-child(5){top:-4px;left:90%;animation-delay:.8s;}
-.grid-lights div:nth-child(6){bottom:-4px;left:10%;animation-delay:1s;}
-.grid-lights div:nth-child(7){bottom:-4px;left:30%;animation-delay:1.2s;}
-.grid-lights div:nth-child(8){bottom:-4px;left:50%;animation-delay:1.4s;}
-.grid-lights div:nth-child(9){bottom:-4px;left:70%;animation-delay:1.6s;}
-.grid-lights div:nth-child(10){bottom:-4px;left:90%;animation-delay:1.8s;}
-.grid-lights div:nth-child(11){top:20%;left:-4px;animation-delay:2s;}
-.grid-lights div:nth-child(12){top:50%;left:-4px;animation-delay:2.2s;}
-.grid-lights div:nth-child(13){top:80%;left:-4px;animation-delay:2.4s;}
-.grid-lights div:nth-child(14){top:20%;right:-4px;animation-delay:2.6s;}
-.grid-lights div:nth-child(15){top:50%;right:-4px;animation-delay:2.8s;}
-.grid-lights div:nth-child(16){top:80%;right:-4px;animation-delay:3s;}
+.header-lights div:nth-child(odd){animation-delay:0s;}
+.header-lights div:nth-child(even){animation-delay:.75s;}
 
 @keyframes blink{
   0%,100%{opacity:0.3}
   50%{opacity:1; transform:scale(1.2)}
 }
 
-/* card styles */
-.card{height:140px;border-radius:12px;perspective:1100px;position:relative;cursor:pointer}
-.card.locked{filter:grayscale(.3);cursor:not-allowed;opacity:.85}
+/* code input */
+.code-row{display:flex;gap:10px;align-items:center;margin-bottom:12px;flex-wrap:wrap}
+input[type="text"]{
+  flex:1;
+  padding:12px;
+  border-radius:12px;
+  border:none;
+  background:#0b1216;
+  color:#fff;
+  font-weight:600;
+  box-shadow:0 0 6px #ffef9f inset;
+}
+input[type="text"]:focus{outline:none; box-shadow:0 0 10px #ffef9f inset;}
+
+.btn{
+  background:linear-gradient(135deg,var(--gold),var(--accent));
+  padding:12px;
+  border-radius:12px;
+  border:none;
+  font-weight:800;
+  cursor:pointer;
+  color:#111;
+}
+.btn:disabled{opacity:.5;cursor:not-allowed}
+
+#status{margin-top:6px;text-align:center;color:var(--muted);font-size:13px}
+
+/* prize */
+.prize-list{
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(120px,1fr));
+  gap:10px;
+  margin-top:16px;
+}
+.prize{
+  padding:12px;
+  border-radius:12px;
+  background:linear-gradient(135deg,#ffd966,#ffe079);
+  color:#111;
+  font-weight:800;
+  text-align:center;
+  box-shadow:0 6px 22px rgba(0,0,0,.4);
+  border:1px solid rgba(255,255,255,0.08)
+}
+.prize small{display:block;margin-top:4px;font-size:12px;color:#222}
+
+/* grid cards */
+.grid{
+  display:grid;
+  grid-template-columns:repeat(3,1fr);
+  gap:12px;
+  margin-top:20px;
+}
+.card{
+  height:140px;
+  border-radius:12px;
+  perspective:1100px;
+  cursor:pointer;
+}
+.card.locked{filter:grayscale(.2);cursor:not-allowed;opacity:.85}
 .card-inner{width:100%;height:100%;transition:transform .55s;transform-style:preserve-3d;border-radius:12px}
 .card.flip .card-inner{transform:rotateY(180deg)}
 .card-front,.card-back{
-  position:absolute;inset:0;border-radius:12px;
+  position:absolute;inset:0;
   display:flex;align-items:center;justify-content:center;
-  backface-visibility:hidden;padding:12px;font-weight:800;text-align:center;
+  backface-visibility:hidden;
+  border-radius:12px;
+  padding:8px;font-weight:700;text-align:center;
 }
-.card-front{background:linear-gradient(135deg,#ffd966,#ffe079);color:#111;box-shadow:0 4px 8px rgba(0,0,0,.3)}
-.card-back{background:linear-gradient(135deg,#fff1b8,#ffe9a3);color:#111;transform:rotateY(180deg);box-shadow:0 4px 8px rgba(0,0,0,.3)}
+.card-front{
+  background:linear-gradient(135deg,#ffd966,#ffe079);
+  color:#111;
+  box-shadow:0 4px 8px rgba(0,0,0,.3);
+}
+.card-back{
+  background:linear-gradient(135deg,#fff7d0,#ffd87a);
+  color:#111;
+  transform:rotateY(180deg);
+  box-shadow:0 4px 8px rgba(0,0,0,.3);
+}
 
-.result{margin-top:18px;display:flex;flex-direction:column;gap:8px;align-items:center;font-size:13px}
-.result .small{color:#bcc3c8}
+.result{margin-top:16px;display:flex;flex-direction:column;gap:6px;align-items:center;font-size:13px}
+.result .small{color:var(--muted)}
 
 @media(max-width:720px){
   .grid{grid-template-columns:repeat(2,1fr)}
   .card{height:120px}
-  .wrap{padding:16px}
+  .wrap{padding:14px}
 }
 </style>
 </head>
 <body>
 
-<div class="wrap">
-
+<main class="wrap">
   <header>
-    <h1>✨ Tebak Kartu Natal — KASINOJP ✨</h1>
-    <p>Masukkan kode dari admin • Pilih maksimal 3 kartu • Kode hanya 1x</p>
+    <div class="header-lights">
+      <div></div><div></div><div></div><div></div><div></div><div></div>
+    </div>
+    <h1>Tebak Kartu Natal</h1>
   </header>
 
-  <div class="code-container">
+  <div class="code-row">
     <input id="codeInput" type="text" placeholder="Masukkan kode akses...">
-  </div>
-
-  <div class="row">
     <button id="verifyBtn" class="btn">Verify</button>
   </div>
   <div id="status">Status: belum terkoneksi</div>
 
-  <div class="prize-list" aria-hidden="false">
+  <div class="prize-list">
     <div class="prize">🎁 PLATINUM <small>10,000</small></div>
     <div class="prize">🎁 DIAMOND <small>25,000</small></div>
     <div class="prize">🎁 SILVER DIAMOND <small>50,000</small></div>
@@ -189,19 +184,9 @@ header p{font-size:13px;color:#bcc3c8;margin-top:6px}
     <div class="prize">🎁 MYTHIC DIAMOND <small>400,000</small></div>
   </div>
 
-  <section id="gridWrap" class="grid">
-    <div class="grid-lights">
-      <!-- 16 lampu keliling -->
-      <div></div><div></div><div></div><div></div>
-      <div></div><div></div><div></div><div></div>
-      <div></div><div></div><div></div><div></div>
-      <div></div><div></div><div></div><div></div>
-    </div>
-  </section>
-
-  <div id="resultArea" class="result"></div>
-
-</div>
+  <section id="gridWrap" class="grid"></section>
+  <div class="result" id="resultArea"></div>
+</main>
 
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
@@ -219,7 +204,6 @@ const firebaseConfig = {
 
 const app = initializeApp(firebaseConfig);
 const db = getDatabase(app);
-
 const configRef = ref(db, "gameConfig/cards");
 
 const gridWrap = document.getElementById('gridWrap');
@@ -234,9 +218,8 @@ let revealed = new Set();
 const maxSelect = 3;
 let selectedCount = 0;
 
-// build grid function
 function buildGrid(){
-  gridWrap.innerHTML='<div class="grid-lights">'+gridWrap.querySelector('.grid-lights').innerHTML+'</div>';
+  gridWrap.innerHTML='';
   for(let i=0;i<9;i++){
     const c=document.createElement('div');
     c.className='card locked';
@@ -253,7 +236,7 @@ function buildGrid(){
 
 function setStatus(txt, ok=true){
   statusEl.textContent='Status: '+txt;
-  statusEl.style.color=ok?'#bcc3c8':'#ff9a9a';
+  statusEl.style.color=ok?'var(--muted)':'#ff9a9a';
 }
 
 onValue(configRef,snap=>{
@@ -297,7 +280,7 @@ async function onCardClick(e){
 
 async function saveUsedCode(){
   const code=(codeInput.value||'').trim();
-  if(!code||!serverConfig)return;
+  if(!code||!serverConfig) return;
   const cardsResult=Array.from(gridWrap.querySelectorAll('.card'))
     .map(c=>c.classList.contains('flip')?c.querySelector('.label').textContent:null);
   await set(ref(db,"gameConfig/usedCodes/"+code),{cards:cardsResult,time:Date.now(),used:true});
