--- a/index.html
+++ b/index.html
@@ -3,218 +3,93 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Tebak Kartu Natal — KASINOJP</title>
+<title>User - Tebak Kartu Natal (Final)</title>
+<link rel="preconnect" href="https://fonts.googleapis.com">
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 <style>
-:root{
-  --bg1:#071229;
-  --bg2:#0c1624;
-  --gold:#ffef9f;
-  --accent:#d4af37;
-  --muted:#bfc6c9;
-}
+  :root{
+    --bg1:#071229;
+    --bg2:#0c1624;
+    --gold:#ffef9f;
+    --accent:#d4af37;
+    --muted:#bfc6c9;
+  }
+  *{box-sizing:border-box}
+  
+  html, body {
+    margin:0;
+    font-family:'Poppins',system-ui,Segoe UI,Roboto;
+    background:linear-gradient(180deg,var(--bg1),var(--bg2));
+    color:#fff;
+    min-height:100vh;
+    overflow-y:auto; 
+    padding:10px;
+  }
 
-*{box-sizing:border-box;margin:0;padding:0}
-html,body{height:100%}
-body{
-  font-family:'Poppins',system-ui,Segoe UI,Roboto,sans-serif;
-  background:linear-gradient(180deg,var(--bg1),var(--bg2));
-  color:#fff;
-  padding:12px;
-}
+  .dec{position:fixed; left:0; top:0; right:0; bottom:0; pointer-events:none; z-index:0;}
+  .dec .tree{position:absolute; width:36px; height:52px; background:linear-gradient(#0a7b1f,#00c04a); clip-path:polygon(50% 0,0 100%,100% 100%); opacity:.75; filter:drop-shadow(0 6px 14px rgba(0,0,0,.6)); animation:treeFall linear infinite;}
+  @keyframes treeFall{0%{transform:translateY(-80px) scale(.6);opacity:.7}100%{transform:translateY(110vh) scale(1);opacity:0}}
+  .dec .snow{position:absolute;width:8px;height:8px;background:#fff;border-radius:50%;opacity:.85;animation:snowFall linear infinite}
+  @keyframes snowFall{0%{transform:translateY(-10px)}100%{transform:translateY(110vh)}}
 
-.wrap{
-  max-width:480px;
-  margin:0 auto;
-  padding:20px;
-  border-radius:18px;
-  background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(0,0,0,0.08));
-  border:1px solid rgba(255,255,255,0.06);
-  box-shadow:0 12px 48px rgba(0,0,0,.6);
-  position:relative;
-  overflow:hidden;
-}
-
-header{text-align:center; position:relative; margin-bottom:16px;}
-header h1{
-  font-size:24px;
-  color:var(--gold);
-  text-shadow:0 0 12px rgba(255,223,130,.5);
-  letter-spacing:2px;
-  display:inline-block;
-  position:relative;
-}
-.header-lights{
-  position:absolute;
-  top:-12px;
-  left:50%;
-  transform:translateX(-50%);
-  display:flex;
-  gap:6px;
-}
-.header-lights div{
-  width:6px;
-  height:6px;
-  border-radius:50%;
-  background:#ffe079;
-  opacity:0.3;
-  animation:blink 1.5s infinite;
-}
-.header-lights div:nth-child(odd){animation-delay:0s;}
-.header-lights div:nth-child(even){animation-delay:.75s;}
-
-@keyframes blink{
-  0%,100%{opacity:0.3}
-  50%{opacity:1; transform:scale(1.2)}
-}
-
-/* code input */
-.code-row{display:flex;gap:10px;align-items:center;margin-bottom:12px;flex-wrap:wrap}
-input[type="text"]{
-  flex:1;
-  padding:12px;
-  border-radius:12px;
-  border:none;
-  background:#0b1216;
-  color:#fff;
-  font-weight:600;
-  box-shadow:0 0 6px #ffef9f inset;
-}
-input[type="text"]:focus{outline:none; box-shadow:0 0 10px #ffef9f inset;}
-
-.btn{
-  background:linear-gradient(135deg,var(--gold),var(--accent));
-  padding:12px;
-  border-radius:12px;
-  border:none;
-  font-weight:800;
-  cursor:pointer;
-  color:#111;
-}
-.btn:disabled{opacity:.5;cursor:not-allowed}
-
-#status{margin-top:6px;text-align:center;color:var(--muted);font-size:13px}
-
-/* prize */
-.prize-list{
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(120px,1fr));
-  gap:10px;
-  margin-top:16px;
-}
-.prize{
-  padding:12px;
-  border-radius:12px;
-  background:linear-gradient(135deg,#ffd966,#ffe079);
-  color:#111;
-  font-weight:800;
-  text-align:center;
-  box-shadow:0 6px 22px rgba(0,0,0,.4);
-  border:1px solid rgba(255,255,255,0.08)
-}
-.prize small{display:block;margin-top:4px;font-size:12px;color:#222}
-
-/* grid cards */
-.grid{
-  display:grid;
-  grid-template-columns:repeat(3,1fr);
-  gap:12px;
-  margin-top:20px;
-}
-.card{
-  height:140px;
-  border-radius:12px;
-  perspective:1100px;
-  cursor:pointer;
-  position:relative;
-}
-.card.locked{filter:grayscale(.2);cursor:not-allowed;opacity:.85}
-.card-inner{width:100%;height:100%;transition:transform .55s;transform-style:preserve-3d;border-radius:12px}
-.card.flip .card-inner{transform:rotateY(180deg)}
-.card-front,.card-back{
-  position:absolute;inset:0;
-  display:flex;align-items:center;justify-content:center;
-  backface-visibility:hidden;
-  border-radius:12px;
-  padding:8px;font-weight:700;text-align:center;
-}
-.card-front{
-  background:linear-gradient(135deg,#ffd966,#ffe079);
-  color:#111;
-  box-shadow:0 4px 8px rgba(0,0,0,.3);
-  position:relative;
-}
-.card-back{
-  background:linear-gradient(135deg,#fff7d0,#ffd87a);
-  color:#111;
-  transform:rotateY(180deg);
-  box-shadow:0 4px 8px rgba(0,0,0,.3);
-}
-
-/* lampu keliling kartu */
-.card-front::after{
-  content:'';
-  position:absolute;
-  inset:0;
-  border-radius:12px;
-  pointer-events:none;
-  box-shadow:0 0 3px 2px #ffef9f;
-}
-.card-lights{
-  position:absolute;
-  inset:0;
-  border-radius:12px;
-  pointer-events:none;
-}
-.card-lights div{
-  width:6px;height:6px;border-radius:50%;
-  position:absolute;
-  background:#ffe079;
-  opacity:0.3;
-  animation:cardBlink 2s infinite;
-}
-@keyframes cardBlink{
-  0%,100%{opacity:0.3}
-  50%{opacity:1; transform:scale(1.3)}
-}
-
-.result{margin-top:16px;display:flex;flex-direction:column;gap:6px;align-items:center;font-size:13px}
-.result .small{color:var(--muted)}
-
-@media(max-width:720px){
-  .grid{grid-template-columns:repeat(2,1fr)}
-  .card{height:120px}
-  .wrap{padding:14px}
-}
+  .wrap{width:100%; max-width:480px; background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(0,0,0,0.12)); border-radius:18px; padding:20px; border:1px solid rgba(212,175,55,0.08); box-shadow:0 10px 40px rgba(2,6,23,0.6); position:relative; z-index:1; margin-bottom:40px;}
+  header{display:flex;align-items:center;gap:16px;justify-content:space-between;flex-wrap:wrap}
+  .title{display:flex;gap:12px;align-items:center;}
+  .title h1{margin:0;font-size:26px;color:var(--gold);text-shadow:0 4px 18px rgba(212,175,55,.12)}
+  .subtitle{color:var(--muted);font-size:13px;margin:0}
+  .code-row{display:flex;gap:12px;align-items:center;margin-top:18px;flex-wrap:wrap}
+  input[type="text"]{padding:12px 14px;border-radius:10px;border:none;background:#0b1216;color:#fff;min-width:180px;flex:1;font-weight:600}
+  .btn{background:var(--gold);color:#111;padding:11px 16px;border-radius:10px;border:none;font-weight:700;cursor:pointer}
+  .btn:disabled{opacity:.6;cursor:not-allowed}
+  .prize-list{display:flex;gap:12px;margin-top:18px;flex-wrap:wrap;justify-content:center}
+  .prize{flex:1 1 28%; min-width:160px; padding:14px; border-radius:12px; background:linear-gradient(135deg,#ff4d4d,#ffb84d,#4caf50); color:#111;font-weight:800;text-align:center;font-size:16px;box-shadow:0 8px 30px rgba(0,0,0,.45); border:2px solid rgba(255,255,255,.12); position:relative;}
+  .prize::before{content:"🎄";position:absolute;left:10px;top:-10px;font-size:20px}
+  .prize small{display:block;color:#222;font-weight:700;margin-top:6px;font-size:12px}
+  .grid{display:grid;grid-template-columns:repeat(3,1fr);gap:16px;margin-top:22px}
+  .card{height:150px;border-radius:14px;perspective:1200px;position:relative;cursor:pointer}
+  .card.locked{filter:grayscale(.25) blur(.2px);cursor:not-allowed;opacity:.9}
+  .card-inner{position:relative;width:100%;height:100%;transition:transform .6s;transform-style:preserve-3d;border-radius:14px}
+  .card.flip .card-inner{transform:rotateY(180deg)}
+  .card-front,.card-back{position:absolute;inset:0;border-radius:14px;display:flex;align-items:center;justify-content:center;font-weight:700; backface-visibility:hidden;padding:12px;text-align:center;}
+  .card-front{background:linear-gradient(180deg,#071018,#0b1013);border:1px solid rgba(255,255,255,0.04);color:var(--muted);font-size:18px}
+  .card-back{background:linear-gradient(135deg,#fff7d0,#ffd87a);transform:rotateY(180deg);color:#111;font-size:18px}
+  .card .label{font-weight:800}
+  .result{margin-top:18px;display:flex;flex-direction:column;gap:8px;align-items:center}
+  .result .small{color:var(--muted);font-size:13px}
+  .confetti{position:fixed;width:8px;height:8px;border-radius:2px;pointer-events:none;animation:confettiDrop 900ms linear forwards;z-index:20}
+  @keyframes confettiDrop{0%{transform:translateY(0) rotate(0);opacity:1}100%{transform:translateY(180px) rotate(360deg);opacity:0}}
+  @media (max-width:720px){.prize{flex:1 1 47%}.grid{grid-template-columns:repeat(2,1fr)}.card{height:130px}}
 </style>
 </head>
 <body>
 
-<main class="wrap">
-  <header>
-    <div class="header-lights">
-      <div></div><div></div><div></div><div></div><div></div><div></div>
-    </div>
-    <h1>Tebak Kartu Natal</h1>
-  </header>
+<div class="dec" id="decContainer"></div>
 
-  <div class="code-row">
-    <input id="codeInput" type="text" placeholder="Masukkan kode akses...">
-    <button id="verifyBtn" class="btn">Verify</button>
+<main class="wrap" role="main" aria-live="polite">
+<header>
+  <div class="title">
+    <h1>Event Tebak Kartu — Natal KASINOJP</h1>
+    <p class="subtitle">Masukkan kode yang diberikan admin, pilih maksimal 3 kartu — kode hanya sekali pakai</p>
   </div>
-  <div id="status">Status: belum terkoneksi</div>
+</header>
 
-  <div class="prize-list">
-    <div class="prize">🎁 PLATINUM <small>10,000</small></div>
-    <div class="prize">🎁 DIAMOND <small>25,000</small></div>
-    <div class="prize">🎁 SILVER DIAMOND <small>50,000</small></div>
-    <div class="prize">🎁 PERFECT DIAMOND <small>100,000</small></div>
-    <div class="prize">🎁 EPIC DIAMOND <small>150,000</small></div>
-    <div class="prize">🎁 MYTHIC DIAMOND <small>400,000</small></div>
-  </div>
+<div class="code-row">
+  <input id="codeInput" type="text" placeholder="Masukkan kode akses..."/>
+  <button id="verifyBtn" class="btn">Verify</button>
+  <div id="status" class="small" style="min-width:200px;text-align:center">Status: belum terkoneksi</div>
+</div>
 
-  <section id="gridWrap" class="grid"></section>
-  <div class="result" id="resultArea"></div>
+<div class="prize-list">
+  <div class="prize">🎁⛄ PLATINUM<br/><small>10,000</small></div>
+  <div class="prize">🎁⛄ DIAMOND<br/><small>25,000</small></div>
+  <div class="prize">🎁⛄ SILVER DIAMOND<br/><small>50,000</small></div>
+  <div class="prize">🎁⛄ PERFECT DIAMOND<br/><small>100,000</small></div>
+  <div class="prize">🎁⛄ EPIC DIAMOND<br/><small>150,000</small></div>
+  <div class="prize">🎁⛄ MHYTIC DIAMOND<br/><small>400,000</small></div>
+</div>
+
+<section id="gridWrap" class="grid"></section>
+<div class="result" id="resultArea" aria-live="polite"></div>
 </main>
 
 <script type="module">
@@ -222,19 +97,22 @@ import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebas
 import { getDatabase, ref, get, set, onValue } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-database.js";
 
 const firebaseConfig = {
-  apiKey: "YOUR_API_KEY",
-  authDomain: "YOUR_PROJECT.firebaseapp.com",
-  databaseURL: "YOUR_DATABASE_URL",
-  projectId: "YOUR_PROJECT",
-  storageBucket: "YOUR_PROJECT.appspot.com",
-  messagingSenderId: "YOUR_SENDER_ID",
-  appId: "YOUR_APP_ID"
+  apiKey: "AIzaSyDlpuf_uIlpmr2ybAqpJ2GTTRW-t86PGf0",
+  authDomain: "hadiahnatal-a033b.firebaseapp.com",
+  databaseURL: "https://hadiahnatal-a033b-default-rtdb.firebaseio.com",
+  projectId: "hadiahnatal-a033b",
+  storageBucket: "hadiahnatal-a033b.firebasestorage.app",
+  messagingSenderId: "577153304596",
+  appId: "1:577153304596:web:5f255e886a379ccb12bf01",
+  measurementId: "G-C5Q83YQ6SK"
 };
 
 const app = initializeApp(firebaseConfig);
 const db = getDatabase(app);
+
 const configRef = ref(db, "gameConfig/cards");
 
+const decContainer = document.getElementById('decContainer');
 const gridWrap = document.getElementById('gridWrap');
 const verifyBtn = document.getElementById('verifyBtn');
 const codeInput = document.getElementById('codeInput');
@@ -247,6 +125,10 @@ let revealed = new Set();
 const maxSelect = 3;
 let selectedCount = 0;
 
+function spawnTree(){const t=document.createElement('div');t.className='tree';t.style.left=(Math.random()*100)+'vw';t.style.animationDuration=(8+Math.random()*8)+'s';decContainer.appendChild(t);setTimeout(()=>t.remove(),18000);}
+function spawnSnow(){const s=document.createElement('div');s.className='snow';s.style.left=(Math.random()*100)+'vw';s.style.animationDuration=(4+Math.random()*6)+'s';decContainer.appendChild(s);setTimeout(()=>s.remove(),10000);}
+setInterval(spawnTree,900);setInterval(spawnSnow,140);
+
 function buildGrid(){
   gridWrap.innerHTML='';
   for(let i=0;i<9;i++){
@@ -255,29 +137,11 @@ function buildGrid(){
     c.dataset.index=i;
     c.innerHTML=`
       <div class="card-inner">
-        <div class="card-front">Kartu ${i+1}
-          <div class="card-lights"></div>
-        </div>
+        <div class="card-front">Kartu ${i+1}</div>
         <div class="card-back"><span class="label">?</span></div>
       </div>`;
     c.addEventListener('click',onCardClick);
     gridWrap.appendChild(c);
-
-    // tambahkan lampu keliling kartu
-    const lightsContainer = c.querySelector('.card-lights');
-    const positions=[
-      [2,2],[50,2],[calc(100%-2px),2],
-      [calc(100%-2px),50],[calc(100%-2px),calc(100%-2px)],
-      [50,calc(100%-2px)],[2,calc(100%-2px)],[2,50]
-    ];
-    for(let j=0;j<8;j++){
-      const l=document.createElement('div');
-      const pos=positions[j];
-      l.style.top=(typeof pos[0]==='number'?pos[0]+'%':pos[0]);
-      l.style.left=(typeof pos[1]==='number'?pos[1]+'%':pos[1]);
-      l.style.animationDelay=(j*0.2)+'s';
-      lightsContainer.appendChild(l);
-    }
   }
 }
 
@@ -287,14 +151,13 @@ function setStatus(txt, ok=true){
 }
 
 onValue(configRef,snap=>{
-  if(snap.exists()){serverConfig=snap.val();setStatus('Siap — data tersedia 🎁');if(!unlocked) buildGrid();}
-  else{serverConfig=null;setStatus('Belum ada konfigurasi admin',false);buildGrid();}
+  if(snap.exists()){serverConfig=snap.val();setStatus('Siap — data tersedia 🎁');if(!unlocked) buildGrid();}else{serverConfig=null;setStatus('Belum ada konfigurasi admin',false);buildGrid();}
 });
 
 async function verifyCode(code){
   try{
     const usedSnap = await get(ref(db,"gameConfig/usedCodes/"+code));
-    if(usedSnap.exists()){return {ok:false,msg:"Kode sudah dipakai"};}
+    if(usedSnap.exists()){return {ok:false,msg:"Kode sudah dipakai. Silahkan hubungi admin"};}
     if(!serverConfig) return {ok:false,msg:"Tidak ada konfigurasi admin"};
     if(code !== (serverConfig.code||'')) return {ok:false,msg:"Kode salah"};
     return {ok:true,msg:"Kode valid"};
@@ -308,36 +171,66 @@ async function onCardClick(e){
   if(!unlocked || revealed.has(idx)) return;
   const cardsArr=serverConfig?.cards||[];
   let val=cardsArr[idx]||'Kosong';
+  
+  // jika berbeda dari kartu pertama → ZONK
   if(selectedCount>0 && val!==cardsArr[0]) val='ZONK';
+  
   el.classList.add('flip');
   el.querySelector('.label').textContent=val;
   revealed.add(idx);
   selectedCount++;
+  
   const msg=document.createElement('div'); msg.className='small';
   msg.textContent=`Kamu membuka Kartu ${idx+1}: ${val}`;
   resultArea.prepend(msg);
+
+  if(['Platinum','Diamond','Super Diamond'].includes(val)){
+    const r=el.getBoundingClientRect();
+    spawnConfetti(r.left+r.width/2,r.top+r.height/2);
+  }
+
   if(selectedCount>=maxSelect){
     await saveUsedCode();
     document.querySelectorAll('.card').forEach(c=>c.classList.add('locked'));
-    const info=document.createElement('div');info.className='small';
-    info.textContent='🎉 Hadiah keluar! Hubungi admin untuk claim';
+    const info=document.createElement('div');
+    info.className='small';
+    info.textContent='🎉 Hadiah sudah keluar! Silahkan hubungi admin untuk claim';
     resultArea.prepend(info);
+  }
+}
+
+function spawnConfetti(x,y){
+  for(let i=0;i<22;i++){
+    const el=document.createElement('div');
+    el.className='confetti';
+    el.style.left=(x+(Math.random()*80-40))+'px';
+    el.style.top=(y+(Math.random()*40-20))+'px';
+    el.style.background=['#ffef9f','#ff4d4d','#4caf50','#ffffff'][Math.floor(Math.random()*4)];
+    document.body.appendChild(el);
+    setTimeout(()=>el.remove(),1000);
   }
 }
 
 async function saveUsedCode(){
   const code=(codeInput.value||'').trim();
-  if(!code||!serverConfig) return;
-  const cardsResult=Array.from(gridWrap.querySelectorAll('.card'))
-    .map(c=>c.classList.contains('flip')?c.querySelector('.label').textContent:null);
-  await set(ref(db,"gameConfig/usedCodes/"+code),{cards:cardsResult,time:Date.now(),used:true});
-  setStatus('Kode & kartu tersimpan ✓');
-  unlocked=false;verifyBtn.disabled=true;codeInput.disabled=true;
+  if(!code){setStatus('Masukkan kode sebelum menyimpan',false);return;}
+  if(!serverConfig){setStatus('Tidak ada konfigurasi admin',false);return;}
+  try{
+    const snap=await get(ref(db,"gameConfig/usedCodes/"+code));
+    if(snap.exists()){setStatus('Kode sudah dipakai, hubungi admin',false);return;}
+    const cardsResult=Array.from(gridWrap.querySelectorAll('.card'))
+      .map(c=>c.classList.contains('flip')?c.querySelector('.label').textContent:null);
+    await set(ref(db,"gameConfig/usedCodes/"+code),{cards:cardsResult,time:Date.now(),used:true});
+    setStatus('Kode & kartu tersimpan ✓');
+    unlocked=false;
+    verifyBtn.disabled=true;
+    codeInput.disabled=true;
+  }catch(err){console.error(err);setStatus('Gagal menyimpan: '+(err.message||err),false);}
 }
 
 verifyBtn.addEventListener('click',async ()=>{
   const code=(codeInput.value||'').trim();
-  if(!code){setStatus('Masukkan kode',false);return;}
+  if(!code){setStatus('Masukkan kode dulu',false);return;}
   setStatus('Memeriksa kode...');
   verifyBtn.disabled=true;
   const res=await verifyCode(code);
@@ -350,5 +243,6 @@ verifyBtn.addEventListener('click',async ()=>{
 
 buildGrid();
 </script>
+
 </body>
 </html>
