--- a/index.html
+++ b/index.html
@@ -36,16 +36,31 @@ input[type="text"]:focus{outline:none; box-shadow:0 0 10px var(--gold);}
 .btn:disabled{opacity:.6; cursor:not-allowed;}
 #status{margin-top:5px; font-size:13px; color:var(--muted); text-align:center;}
 
-/* Prize List */
-.prize-section{margin-bottom:40px;} /* wrapper untuk hadiah */
+/* Prize List - tema Natal */
+.prize-section{margin-bottom:40px;}
 .prize-list{display:flex; flex-wrap:wrap; gap:12px; justify-content:center;}
-.prize{flex:1 1 28%; min-width:160px; padding:14px; border-radius:14px; background:linear-gradient(135deg,#ffb84d,#ffd966,#ffd966); color:#111; font-weight:800; text-align:center; font-size:16px; box-shadow:0 8px 35px rgba(0,0,0,.45); border:2px solid rgba(255,255,255,.12); position:relative; transition:0.3s;}
-.prize:hover{transform:translateY(-3px) scale(1.03); box-shadow:0 12px 40px rgba(212,175,55,.7);}
-.prize::before{content:"🎄"; position:absolute; left:10px; top:-10px; font-size:20px;}
+.prize{
+  flex:1 1 28%;
+  min-width:160px;
+  padding:16px;
+  border-radius:16px;
+  background:linear-gradient(135deg,#d62828,#f77f00,#ffd166,#06d6a0); /* Merah, Oranye, Emas, Hijau */
+  color:#111;
+  font-weight:800;
+  text-align:center;
+  font-size:16px;
+  box-shadow:0 8px 35px rgba(0,0,0,.45);
+  border:2px solid rgba(255,255,255,.12);
+  position:relative;
+  transition:0.3s;
+}
+.prize:hover{transform:translateY(-3px) scale(1.05); box-shadow:0 12px 45px rgba(212,175,55,.8);}
+.prize::before{content:"🎄"; position:absolute; left:10px; top:-10px; font-size:22px; animation:twinkle 1.5s infinite alternate;}
+@keyframes twinkle{0%{transform:scale(1);opacity:0.6;}50%{transform:scale(1.2);opacity:1;}100%{transform:scale(1);opacity:0.6;}}
 .prize small{display:block; margin-top:6px; font-size:12px; color:#222;}
 
 /* Card Grid */
-.grid-section{margin-top:30px;} /* wrapper untuk grid kartu */
+.grid-section{margin-top:30px;}
 .grid{display:grid; grid-template-columns:repeat(3,1fr); gap:16px;}
 .card{height:150px; border-radius:16px; perspective:1200px; position:relative; cursor:pointer; transition:0.4s;}
 .card.locked{filter:grayscale(.25) blur(.2px); cursor:not-allowed; opacity:.9;}
@@ -112,7 +127,6 @@ input[type="text"]:focus{outline:none; box-shadow:0 0 10px var(--gold);}
 </main>
 
 <script type="module">
-// Script tetap sama seperti versi sebelumnya
 import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
 import { getDatabase, ref, get, set, onValue } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-database.js";
 
